Updates from Overleaf

--- a/abstract.tex
+++ b/abstract.tex
@@ -22,13 +22,13 @@
 \textbf{Background:} 
 % The Sun is a massive and highly dynamic ball of ionised gas (plasma) with a magnetic field extending throughout the solar system. The plasma is frozen to the magnetic field and so magneto-kinetic waves, i.e. propagating oscillations in kinetic and magnetic energy are ubiquitous in the solar atmosphere. 
 % This thesis uses the fundamental equations of magnetohydrodynamics (the MHD equations) to build our understanding of wave behaviour in the solar corona. The MHD equations bring together equations from hydrodynamics (the study of non-ionised fluids) with Maxwell's electromagnetic equations. This means that the dynamics of plasma shares a lot of properties with the dynamics of non-ionised fluids, however, some phenomena occurs exclusively in plasma and cannot occur in a regular non-ionised fluid. 
-The sun is a massive and highly dynamic ball of plasma, and oscillations in kinetic and magnetic energy are commonplace throughout its atmosphere. Since the plasma conducts electricity, we model the fluid using magnetohydrodynamics (MHD) instead of hydrodynamics which is used for non-ionised fluids. We study two MHD wave phenomena, namely, phase mixing and resonant absorption. These are both phenomena which occur exclusively in MHD fluids and do not occur in hydrodynamic fluids. We study their implications for the coronal heating problem and coronal seismology. The solar surface is significantly denser than the atmosphere and we model it as solid wall. In other words, we impose line-tied boundary conditions at the solar surface where the velocity is set equal to zero.
+The \alexedit{S}un is a massive and highly dynamic ball of plasma, and oscillations in kinetic and magnetic energy are commonplace throughout its atmosphere. Since the plasma conducts electricity, we model the fluid using magnetohydrodynamics (MHD) instead of hydrodynamics which is used for non-ionised fluids. We study two MHD wave phenomena, namely, phase mixing and resonant absorption. These are both phenomena which occur exclusively in MHD fluids and do not occur in hydrodynamic fluids. We study their implications for the coronal heating problem and coronal seismology. The solar surface is significantly denser than the atmosphere and we model it as solid wall. In other words, we impose line-tied boundary conditions at the solar surface where the velocity is set equal to zero.
 % The coronal heating problem relates to the question; `why is the corona approximately $10^6\si{.K}$ while the photosphere which is closer to the centre of the Sun is only about $10^4\si{.K}$?' Coronal seismology is a technique where mathematical models are used to infer hard to measure quantities, e.g. the coronal magnetic field strength or density gradients from easier to measure quantities e.g. wave frequencies and damping time.
 
 \textbf{Aims:}
 % \textcolor{red}{The second chapter aims to study the simplest know MHD wave, namely Alfv\'en waves. The goal is to explain some of the key ideas which will be developed throughout this thesis.} After the introduction, the second chapter studies the simplest known MHD wave, namely, Alfv\'en waves. We study the resonances which can form in coronal loops and the effects introduced by allowing waves to leak out of the corona and by switching from a sinusoidal driver to a broadband driver.
 1) The first research chapter (Chapter \ref{chap:ideal_footpoint_driven_alfven_waves}), introduces some of the key properties of footpoint driven Alfv\'en waves (a type of MHD wave) which are relevant for the rest of this thesis.
-2) Chapter \ref{chap:resistive_phase_mixed_alfven_waves} calculates an upper bound for the heat that can be produced by linear phase-mixed Alfv\'en at observed frequencies and amplitudes to assess its viability as a coronal heating mechanism.
+2) Chapter \ref{chap:resistive_phase_mixed_alfven_waves} calculates an upper bound for the heat that can be produced by linear phase-mixed Alfv\'en \alexedit{waves} at observed frequencies and amplitudes to assess its viability as a coronal heating mechanism.
 3) Chapter \ref{chap:resonant_absorption_in_an_oblique_field} tests if line-tied boundary conditions still apply in a resonant absorption experiment where the transverse length-scales can be very short.
 % \textcolor{red}{The fourth chapter aims to test if the boundary layers formed in resonant absorption experiments where the background field is oblique to the transition region are physical or a result of imposing line-tied boundary conditions.} The fourth chapter studies resonant absorption for the case where the background magnetic field is tilted to be oblique to the transition region. Imposing line-tied boundary conditions at the transition region generates large-amplitude boundary layers. We test if these boundary layers are physical and not a fictitious result arising from the use of line-tied boundary conditions.
 
@@ -36,7 +36,7 @@ The sun is a massive and highly dynamic ball of plasma, and oscillations in kine
 
 \textbf{Results:} 1) We show that the growth of energy in closed loops for a sinusoidal footpoint driver is highly dependent on the driver frequency. If a resonance is excited, then the energy grows quadratically with time, and for a broadband driver, the energy grows linearly on average. If the loop is partially-closed (i.e. only a fraction of the wave amplitude reflects at the boundary), the energy will converge towards a steady-state in which the energy of the loop remains constant with time. 
 2) We calculate an upper bound for the heat that can be produced by phase-mixed Alfv\'en waves and find that it is on average too small to play a significant role in coronal heating. 
-3) We show that if the length-scales perpendicular or parallel to the boundary is sufficiently short, then imposing line-tied boundary conditions may no longer be valid. However, researchers may wish to continue to use them in their models for their simplicity and ability to significantly reduce computation time if they understand and are aware of their flaws.
+3) We show that if the length-scales perpendicular or parallel to the boundary is sufficiently short, then imposing line-tied boundary conditions may no longer be valid. However, researchers may wish to continue to use them in their models for their simplicity and ability to significantly reduce computation time if they understand and are aware of their \alexedit{limitations}.
 % However, the energy of the boundary layers does not grow with time and so we argue its okay to use line-tied boundary conditions in future models provided it is understood that the boundary layers produced are mostly unphysical.
 
 \end{spacing}
