--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,23 @@
 % Articles
 
+@ARTICLE{Afanasyev2020,
+       author = {{Afanasyev}, A.~N. and {Van Doorsselaere}, T. and {Nakariakov}, V.~M.},
+        title = "{Excitation of decay-less transverse oscillations of coronal loops by random motions}",
+      journal = {Astronomy \& Astrophysics},
+     keywords = {Sun: general, Sun: oscillations, Sun: corona, waves, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = jan,
+       volume = {633},
+          eid = {L8},
+        pages = {L8},
+          doi = {10.1051/0004-6361/201937187},
+archivePrefix = {arXiv},
+       eprint = {1912.07980},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...633L...8A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Antiochos2000,
        author = {{Antiochos}, S.~K. and {MacNeice}, P.~J. and {Spicer}, D.~S.},
         title = "{The Thermal Nonequilibrium of Prominences}",
@@ -809,6 +827,21 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Kolotkov2016,
+       author = {{Kolotkov}, D.~Y. and {Anfinogentov}, S.~A. and {Nakariakov}, V.~M.},
+        title = "{Empirical mode decomposition analysis of random processes in the solar atmosphere}",
+      journal = {Astronomy \& Astrophysics},
+     keywords = {Sun: atmosphere, Sun: photosphere, Sun: chromosphere, Sun: corona, sunspots, methods: data analysis},
+         year = 2016,
+        month = aug,
+       volume = {592},
+          eid = {A153},
+        pages = {A153},
+          doi = {10.1051/0004-6361/201628306},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016A&A...592A.153K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Kudoh1999,
        author = {{Kudoh}, Takahiro and {Shibata}, Kazunari},
         title = "{Alfv{\'e}n Wave Model of Spicules and Coronal Heating}",
@@ -1077,6 +1110,20 @@ archivePrefix = {arXiv},
         pages = {780},
           doi = {10.1002/asna.200811031},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2008AN....329..780M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Nakariakov1997,
+       author = {{Nakariakov}, V.~M. and {Roberts}, B. and {Murawski}, K.},
+        title = "{Alfven Wave Phase Mixing as a Source of Fast Magnetosonic Waves}",
+      journal = {Solar Physics},
+         year = 1997,
+        month = sep,
+       volume = {175},
+       number = {1},
+        pages = {93-105},
+          doi = {10.1023/A:1004965725929},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1997SoPh..175...93N},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -1355,6 +1402,19 @@ archivePrefix = {arXiv},
         pages = {643-645},
           doi = {10.1086/155949},
        adsurl = {https://ui.adsabs.harvard.edu/abs/1978ApJ...220..643R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Ruderman1998,
+       author = {{Ruderman}, Michael S. and {Nakariakov}, Valery M. and {Roberts}, Bernard},
+        title = "{Alfven wave phase mixing in two-dimensional open magnetic configurations.}",
+      journal = {Astronomy \& Astrophysics},
+     keywords = {MHD, SUN: CORONA, SUN: OSCILLATIONS, SUN: MAGNETIC FIELDS, WAVES, METHODS: ANALYTICAL},
+         year = 1998,
+        month = oct,
+       volume = {338},
+        pages = {1118-1124},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1998A&A...338.1118R},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
