--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \usepackage{setspace}
 \usepackage[font=footnotesize]{caption}
 \usepackage[toc,page]{appendix}
+\usepackage{pdfpages}
 
 % \setcounter{chapter}{-1}
 
@@ -31,6 +32,8 @@
 % \fancyhead[L]{\rightmark}
 \fancyhead[L]{\leftmark}
 
+\newcommand{\alexedit}[1]{\textcolor{red}{\textbf{#1}}}
+
 \let\vec\boldsymbol
 
 \begin{document}
@@ -38,91 +41,94 @@
 \onehalfspacing
 
 % \input{titlepage}
+\includepdf[pages=-,width=\paperwidth]{titlepage.pdf}
 
 \input{abstract}
 
 \newpage
 
-\section*{Candidate’s declaration}
+\includepdf[pages=-,width=\paperwidth]{declarations.pdf}
 
-I, Alexander Philip Kofi Prokopyszyn, do hereby certify that this thesis, submitted for the degree of PhD, which is approximately 30,000 words in length, has been written by me, and that it is the record of work carried out by me, or principally by myself in collaboration with others as acknowledged, and that it has not been submitted in any previous application for any degree. I confirm that any appendices included in my thesis contain only material permitted by the `Assessment of Postgraduate Research Students' policy.
-\vskip 0.2in
-\noindent I was admitted as a research student at the University of St Andrews in September 2017.
-\vskip 0.2in
-\noindent I received funding from an organisation or institution and have acknowledged the funder(s) in the full text of my thesis.
-\vskip 0.2in
-\noindent Date: ............................\quad Signature of candidate:.......................................................
-\vskip 1in
+% \section*{Candidate’s declaration}
 
-\section*{Supervisor’s declaration}
+% I, Alexander Philip Kofi Prokopyszyn, do hereby certify that this thesis, submitted for the degree of PhD, which is approximately 30,000 words in length, has been written by me, and that it is the record of work carried out by me, or principally by myself in collaboration with others as acknowledged, and that it has not been submitted in any previous application for any degree. I confirm that any appendices included in my thesis contain only material permitted by the `Assessment of Postgraduate Research Students' policy.
+% \vskip 0.2in
+% \noindent I was admitted as a research student at the University of St Andrews in September 2017.
+% \vskip 0.2in
+% \noindent I received funding from an organisation or institution and have acknowledged the funder(s) in the full text of my thesis.
+% \vskip 0.2in
+% \noindent Date: ............................\quad Signature of candidate:.......................................................
+% \vskip 1in
 
-I hereby certify that the candidate has fulfilled the conditions of the Resolution and Regulations appropriate for the degree of PhD in the University of St Andrews and that the candidate is qualified to submit this thesis in application for that degree. I confirm that any appendices included in the thesis contain only material permitted by the `Assessment of Postgraduate Research Students' policy.
-\vskip 0.2in
-\noindent Date: ............................ \quad Signature of supervisor: ......................................................
+% \section*{Supervisor’s declaration}
 
-\newpage
+% I hereby certify that the candidate has fulfilled the conditions of the Resolution and Regulations appropriate for the degree of PhD in the University of St Andrews and that the candidate is qualified to submit this thesis in application for that degree. I confirm that any appendices included in the thesis contain only material permitted by the `Assessment of Postgraduate Research Students' policy.
+% \vskip 0.2in
+% \noindent Date: ............................ \quad Signature of supervisor: ......................................................
 
-\section*{Permission for publication}
+% \newpage
 
-In submitting this thesis to the University of St Andrews we understand that we are giving permission for it to be made available for use in accordance with the regulations of the University Library for the time being in force, subject to any copyright vested in the work not being affected thereby. We also understand, unless exempt by an award of an embargo as requested below, that the title and the abstract will be published, and that a copy of the work may be made and supplied to any bona fide library or research worker, that this thesis will be electronically accessible for personal or research use and that the library has the right to migrate this thesis into new electronic forms as required to ensure continued access to the thesis.
-\vskip 0.2in
-\noindent I, Alexander Philip Kofi Prokopyszyn, confirm that my thesis does not contain any third-party material that requires copyright clearance.
-\vskip 0.2in
-\noindent The following is an agreed request by candidate and supervisor regarding the publication of this thesis:
-\vskip 0.2in
-\noindent \textbf{Printed copy} \\
-\noindent No embargo on print copy.
-\vskip 0.2in
-\noindent \textbf{Electric copy}
-\noindent \\
-\noindent No embargo on electronic copy.
-\vskip 0.2in
-\noindent Date: ............................ \quad Signature of candidate: ......................................................
-\vskip 0.2in
-\noindent Date: ............................ \quad Signature of supervisor: ......................................................
+% \section*{Permission for publication}
 
-\newpage
+% In submitting this thesis to the University of St Andrews we understand that we are giving permission for it to be made available for use in accordance with the regulations of the University Library for the time being in force, subject to any copyright vested in the work not being affected thereby. We also understand, unless exempt by an award of an embargo as requested below, that the title and the abstract will be published, and that a copy of the work may be made and supplied to any bona fide library or research worker, that this thesis will be electronically accessible for personal or research use and that the library has the right to migrate this thesis into new electronic forms as required to ensure continued access to the thesis.
+% \vskip 0.2in
+% \noindent I, Alexander Philip Kofi Prokopyszyn, confirm that my thesis does not contain any third-party material that requires copyright clearance.
+% \vskip 0.2in
+% \noindent The following is an agreed request by candidate and supervisor regarding the publication of this thesis:
+% \vskip 0.2in
+% \noindent \textbf{Printed copy} \\
+% \noindent No embargo on print copy.
+% \vskip 0.2in
+% \noindent \textbf{Electric copy}
+% \noindent \\
+% \noindent No embargo on electronic copy.
+% \vskip 0.2in
+% \noindent Date: ............................ \quad Signature of candidate: ......................................................
+% \vskip 0.2in
+% \noindent Date: ............................ \quad Signature of supervisor: ......................................................
 
-\section*{Underpinning research data or digital outputs}
+% \newpage
 
-I, Alexander Philip Kofi Prokopyszyn, hereby certify that no requirements to deposit original research data or digital outputs apply to this thesis and that, where appropriate, secondary data used have been referenced in the full text of my thesis.
-\vskip 0.2in
-\noindent Date: ............................ \quad Signature of candidate: .......................................................
+% \section*{Underpinning research data or digital outputs}
 
-\vskip 0.5in
+% I, Alexander Philip Kofi Prokopyszyn, hereby certify that no requirements to deposit original research data or digital outputs apply to this thesis and that, where appropriate, secondary data used have been referenced in the full text of my thesis.
+% \vskip 0.2in
+% \noindent Date: ............................ \quad Signature of candidate: .......................................................
 
-\section*{Financial support}
-The research leading to the results presented within this thesis has received funding
-from the the Science and Technology Facilities Council (U.K.) through the consolidated grant ST/N000609/1.
+% \vskip 0.5in
 
-\newpage
+% \section*{Financial support}
+% The research leading to the results presented within this thesis has received funding
+% from the the Science and Technology Facilities Council (U.K.) through the consolidated grant ST/N000609/1.
 
-\section*{Publications}
+% \newpage
 
-This thesis contains work which has been adapted from the following publications:
+% \section*{Publications}
 
-\begin{enumerate}
-    \item Prokopyszyn, A. P. K., A. W. Hood, and Ineke De Moortel. ``Phase mixing of nonlinear Alfvén waves." \textit{Astronomy \& Astrophysics} 624 (2019): A90.
-    \item Prokopyszyn, A. P. K., and A. W. Hood. ``Investigating the damping rate of phase-mixed Alfvén waves." \textit{Astronomy \& Astrophysics} 632 (2019): A93.
-    \item Prokopyszyn, A. P. K., A. N. Wright, and A. W. Hood. ``Line-tied boundary conditions can cause resonant absorption models to generate unphysically large boundary layers." \textit{The Astrophysical Journal} (\textit{in prep}).
-\end{enumerate}
+% This thesis contains work which has been adapted from the following publications:
 
-\section*{Collaboration statement}
+% \begin{enumerate}
+%     \item Prokopyszyn, A. P. K., A. W. Hood, and Ineke De Moortel. ``Phase mixing of nonlinear Alfvén waves." \textit{Astronomy \& Astrophysics} 624 (2019): A90.
+%     \item Prokopyszyn, A. P. K., and A. W. Hood. ``Investigating the damping rate of phase-mixed Alfvén waves." \textit{Astronomy \& Astrophysics} 632 (2019): A93.
+%     \item Prokopyszyn, A. P. K., A. N. Wright, and A. W. Hood. ``Line-tied boundary conditions can cause resonant absorption models to generate unphysically large boundary layers." \textit{The Astrophysical Journal} (\textit{in prep}).
+% \end{enumerate}
 
-The numerical simulations presented in this thesis were carried out by myself under
-the supervision of Prof. Alan Hood, Prof Ineke De Moortel and Dr Andrew Wright.
+% \section*{Collaboration statement}
 
-\newpage
+% The numerical simulations presented in this thesis were carried out by myself under
+% the supervision of Prof. Alan Hood, Prof Ineke De Moortel and Dr Andrew Wright.
 
-\section*{Acknowledgements}
+% \newpage
 
-I want to thank several people for their aid and support in the completion of this thesis.
+% \section*{Acknowledgements}
 
-Firstly, I am incredibly grateful to my primary supervisor, Alan, for his help and guidance throughout my PhD. His enthusiasm and expertise played a crucial role in making this work possible. I want to thank my co-supervisors, Ineke and Andy. I found Ineke's advice really useful, and she ensured I didn't stray off on too many tangents. I found Andy's constructive criticism and ability to think about problems from a physical and a mathematical perspective very insightful.
+% I want to thank several people for their aid and support in the completion of this thesis.
 
-Secondly, I'd like to thank all of the Maths department members and Steve's football players. A special thanks to my office mates and everyone else for the long lunch breaks and interesting conversations. Thanks to Callan for being a great house/office-mate throughout the COVID-19 pandemic.
+% Firstly, I am incredibly grateful to my primary supervisor, Alan, for his help and guidance throughout my PhD. His enthusiasm and expertise played a crucial role in making this work possible. I want to thank my co-supervisors, Ineke and Andy. I found Ineke's advice really useful, and she ensured I didn't stray off on too many tangents. I found Andy's constructive criticism and ability to think about problems from a physical and a mathematical perspective very insightful.
 
-Last but not least, I would like to thank my family. Thank you to my parents and siblings for always believing in me and encouraging me through the highs and lows. I am also grateful to Isobel and Ken for their advice and assistance.
+% Secondly, I'd like to thank all of the Maths department members and Steve's football players. A special thanks to my office mates and everyone else for the long lunch breaks and interesting conversations. Thanks to Callan for being a great house/office-mate throughout the COVID-19 pandemic.
+
+% Last but not least, I would like to thank my family. Thank you to my parents and siblings for always believing in me and encouraging me through the highs and lows. I am also grateful to Isobel and Ken for their advice and assistance.
  
 \tableofcontents
 
