Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -1379,6 +1379,23 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Prokopyszyn2021,
+       author = {{Prokopyszyn}, A.~P.~K. and {Wright}, A.~N. and {Hood}, A.~W.},
+        title = "{Line-tied boundary conditions can cause resonant absorption models to generate unphysically large boundary layers}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = apr,
+       volume = {$\emptyset$},
+          eid = {arXiv:2104.10497},
+        pages = {arXiv:2104.10497},
+archivePrefix = {arXiv},
+       eprint = {2104.10497},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210410497P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @article{Rickard1994,
   title={Alfv{\'e}n resonance excitation and fast wave propagation in magnetospheric waveguides},
