Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -1379,23 +1379,20 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Prokopyszyn2021,
-       author = {{Prokopyszyn}, A.~P.~K. and {Wright}, A.~N. and {Hood}, A.~W.},
-        title = "{Line-tied boundary conditions can cause resonant absorption models to generate unphysically large boundary layers}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Solar and Stellar Astrophysics},
-         year = 2021,
-        month = apr,
-       volume = {$\emptyset$},
-          eid = {arXiv:2104.10497},
-        pages = {arXiv:2104.10497},
-archivePrefix = {arXiv},
-       eprint = {2104.10497},
- primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210410497P},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@article{Prokopyszyn2021,
+	doi = {10.3847/1538-4357/abf65b},
+	url = {https://doi.org/10.3847/1538-4357/abf65b},
+	year = 2021,
+	month = {jun},
+	publisher = {American Astronomical Society},
+	volume = {914},
+	number = {1},
+	pages = {15},
+	author = {A. P. K. Prokopyszyn and A. N. Wright and A. W. Hood},
+	title = {Line-tied Boundary Conditions Can Cause Resonant Absorption Models to Generate Unphysically Large Boundary Layers},
+	journal = {The Astrophysical Journal},
+	abstract = {This paper uses linear magnetohydrodynamics to model resonant absorption in coronal plasma with a Cartesian coordinate system. We impose line-tied boundary conditions and tilt the background magnetic field to be oblique to the transition region. Halberstadt & Goedbloed, Goedbloed & Halberstadt, and Arregui et al. show that line-tied boundary conditions cause their resonant absorption models to produce steep boundary layers/evanescent fast waves. We aim to study the importance of boundary layers and assess their significance in a solar context. We calculate solutions in a model where we impose line-tied boundary conditions and compare this with a model where we include the chromosphere instead. Results are calculated analytically and then verified numerically. We show that line-tied boundary conditions can cause the model to overestimate the boundary layers’ amplitude significantly. If the fast waves can propagate in the chromosphere, then the line-tied model accurately predicts the boundary layers’ amplitude. However, if the fast waves are evanescent, then the boundary layers’ size is reduced significantly, and the line-tied model overestimates their amplitude. This leads to the counterintuitive result that length scales tangential to the transition region can play an essential role in determining line-tied boundary conditions’ validity. The results suggest that line-tied boundary conditions can cause the model to generate unphysically large boundary layers. However, researchers may wish to continue to use them in their models for their simplicity and ability to significantly reduce computation time if they understand and are aware of their flaws.}
 }
-
 
 @article{Rickard1994,
   title={Alfv{\'e}n resonance excitation and fast wave propagation in magnetospheric waveguides},
